# yc-voice-agents-hackathon

./: DEMO_SCRIPT.md  README.md  architecture.html  dashboard.html  result_591270_report.md  sample_call_transcript.md  v1_5_proposed_prompt.md
calls/: 02-known-patient-happy-path.md  03-multi-vector-redteam.md  04-third-party-phi.md  05-name-collection-loop.md  README.md
server/: Dockerfile  bot-cora.py  clinic_backend.py  pcc-deploy.toml  pyproject.toml
